interface Explorable
{
    public abstract void accept(ExploringVisitor v);
}